# ok-IN

./: .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  README_en.md  deploy.txt  main.py  main_debug.py  pyappify.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
assets/: coco_annotations.json
src/: Labels.py  config.py  features.py  globals.py
src/scene/: INScene.py
src/task/: AutoLoginTask.py  BaseINTask.py  DailyTask.py  INOneTimeTask.py  SkipDialogTask.py  process_feature.py
tests/: test_structure.py
