[project]
name = "ok-IN"
version = "0.1.0"
description = "An image-recognition-based automation tool for Infinity Nikki, with background mode support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ok-script>=1.0.148",
    "onnxocr-ppocrv5>=0.0.18",
    "opencv-python>=4.13.0.92",
    "pyside6==6.9.1",
]

[dependency-groups]
dev = [
    "polib>=1.2.0",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
